
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct args {char* file_path; int * pipe_fd; } ;
typedef int pid_t ;


 int CLONE_NEWUSER ;
 int O_RDWR ;
 int PATH_MAX ;
 int SIGCHLD ;
 scalar_t__ STACK_SIZE ;
 int assert (int) ;
 int child ;
 scalar_t__ child_stack ;
 int clone (int ,scalar_t__,int,struct args*) ;
 int close (int ) ;
 int getuid () ;
 int open (char*,int ) ;
 int pipe (int *) ;
 int snprintf (char*,int,char*,long) ;
 scalar_t__ strlen (char*) ;
 int waitpid (int,int *,int ) ;
 scalar_t__ write (int,char*,scalar_t__) ;

int main(int argc, char *argv[]) {
    int fd;
    pid_t pid;
    char mapping[1024];
    char map_file[PATH_MAX];
    struct args f_args;

    assert(argc == 2);

    f_args.file_path = argv[1];

    assert(pipe(f_args.pipe_fd) != -1);

    pid = clone(child, child_stack + STACK_SIZE, CLONE_NEWUSER | SIGCHLD, &f_args);
    assert(pid != -1);


    snprintf(mapping, 1024, "0 %d 1\n", getuid());


    snprintf(map_file, PATH_MAX, "/proc/%ld/uid_map", (long) pid);
    fd = open(map_file, O_RDWR); assert(fd != -1);

    assert(write(fd, mapping, strlen(mapping)) == strlen(mapping));
    close(f_args.pipe_fd[1]);

    assert (waitpid(pid, ((void*)0), 0) != -1);
}
